--- a/PA6.qmd
+++ b/PA6.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Practice Activity 6"
+author: "Diego Jara, Brian Mai, Drew Cloughley, Cat Mispagel"
 format: html
 editor: visual
 embed-resources: true
